--- a/README
+++ b/README
@@ -393,6 +393,42 @@ SUBROUTINES/METHODS
         my $firefox = Firefox::Marionette->new();
         $firefox->agent($user_agent); # agent is now the most popular agent from useragents.me
 
+    If the user agent string that is passed as a parameter looks like a
+    Chrome <https://www.google.com/chrome/>, Edge
+    <https://microsoft.com/edge> or Safari <https://www.apple.com/safari/>
+    user agent string, then this method will also try and change other
+    profile preferences to match the new agent string. These parameters
+    are;
+
+      * general.appversion.override
+
+      * general.oscpu.override
+
+      * general.platform.override
+
+      * network.http.accept
+
+      * network.http.accept-encoding
+
+      * network.http.accept-encoding.secure
+
+      * privacy.donottrackheader.enabled
+
+    If the stealth parameter is supplied, it will also attempt to change a
+    number of javascript attributes to match the desired browser. The
+    following websites have been very useful in testing these ideas;
+
+      * https://browserleaks.com/javascript
+
+      * https://www.amiunique.org/fingerprint
+
+      * https://bot.sannysoft.com/
+
+    See IMITATING OTHER BROWSERS a discussion of these types of techniques.
+    These changes are not foolproof, but it is interesting to see what can
+    be done with modern browsers. All this behaviour should be regarded as
+    extremely experimental and subject to change. Feedback welcome.
+
  alert_text
 
     Returns the message shown in a currently displayed modal message box
@@ -2158,8 +2194,8 @@ SUBROUTINES/METHODS
 
       * stealth - stops navigator.webdriver
       <https://developer.mozilla.org/en-US/docs/Web/API/Navigator/webdriver>
-      from being accessible by the current web page. This is highly
-      experimental. See WEBSITES THAT BLOCK AUTOMATION for a discussion.
+      from being accessible by the current web page. This is extremely
+      experimental. See IMITATING OTHER BROWSERS for a discussion.
 
       * survive - if this is set to a true value, firefox will not
       automatically exit when the object goes out of scope. See the
@@ -3377,6 +3413,37 @@ FINDING ELEMENTS IN A SHADOW DOM
     extremely experimental and subject to change when Firefox gets the
     "correct" functionality.
 
+IMITATING OTHER BROWSERS
+
+    There are a collection of methods and techniques that may be useful if
+    you would like to change your geographic location or how the browser
+    appears to your web site.
+
+      * the stealth parameter of the new method. This method will stop the
+      browser reporting itself as a robot and will also (when combined with
+      the agent method, change other javascript characteristics to match
+      the User Agent
+      <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/User-Agent>
+      string.
+
+      * the agent method, which if supplied a recognisable User Agent
+      <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/User-Agent>,
+      will attempt to change other attributes to match the desired browser.
+      This is extremely experimental and feedback is welcome.
+
+      * the geo method, which allows the modification of the Geolocation
+      <https://developer.mozilla.org/en-US/docs/Web/API/Geolocation>
+      reported by the browser, but not the location produced by mapping the
+      external IP address used by the browser (see the NETWORK ARCHITECTURE
+      section for a discussion of different types of proxies that can be
+      used to change your external IP address).
+
+      * the languages method, which can change the requested languages
+      <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/Accept-Language>
+      for your browser session.
+
+    This list of methods may grow.
+
 WEBSITES THAT BLOCK AUTOMATION
 
     Marionette by design
@@ -3384,9 +3451,9 @@ WEBSITES THAT BLOCK AUTOMATION
     allows web sites to detect that the browser is being automated. Firefox
     no longer (since version 88)
     <https://bugzilla.mozilla.org/show_bug.cgi?id=1632821> allows you to
-    disable this functionality while you are automating the browser. This
-    can be overridden with the stealth parameter for the new method. This
-    is very experimental and feedback is welcome.
+    disable this functionality while you are automating the browser, but
+    this can be overridden with the stealth parameter for the new method.
+    This is extremely experimental and feedback is welcome.
 
     If the web site you are trying to automate mysteriously fails when you
     are automating a workflow, but it works when you perform the workflow
