--- a/README
+++ b/README
@@ -373,8 +373,8 @@ SUBROUTINES/METHODS
 
     accepts an optional value for the User-Agent
     <https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/User-Agent>
-    header and sets this using the profile preferences. This value will be
-    used on the next page load. It returns the current value, such as
+    header and sets this using the profile preferences and inserting
+    javascript into the current page. It returns the current value, such as
     'Mozilla/5.0 (<system-information>) <platform> (<platform-details>)
     <extensions>'. This value is retrieved with navigator.userAgent
     <https://developer.mozilla.org/en-US/docs/Web/API/Navigator/userAgent>.
@@ -414,9 +414,33 @@ SUBROUTINES/METHODS
 
       * privacy.donottrackheader.enabled
 
-    If the stealth parameter is supplied, it will also attempt to change a
-    number of javascript attributes to match the desired browser. The
-    following websites have been very useful in testing these ideas;
+    In addition, this method will accept a hash of values as parameters as
+    well. When a hash is provided, this method will alter specific parts of
+    the normal Firefox User Agent. These hash parameters are;
+
+      * os - The desired operating system, known values are "linux",
+      "win32", "darwin", "freebsd", "netbsd", "openbsd" and "dragonfly"
+
+      * version - A specific version of firefox, such as 120.
+
+      * increment - A specific offset from the actual version of firefox,
+      such as -5
+
+    These parameters can be used to set a user agent string like so;
+
+        use Firefox::Marionette();
+        use strict;
+    
+        my $firefox = Firefox::Marionette->new();
+        $firefox->agent(os => 'freebsd', version => 118);
+    
+        # user agent is now equal to
+        # Mozilla/5.0 (X11; FreeBSD amd64; rv:109.0) Gecko/20100101 Firefox/118.0
+
+    If the stealth parameter has supplied to the new method, it will also
+    attempt to change a number of javascript attributes to match the
+    desired browser. The following websites have been very useful in
+    testing these ideas;
 
       * https://browserleaks.com/javascript
 
