--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Firefox-Marionette
 
+1.53  Sun Mar 03 16:33 2024
+       Adding CLEAR_BOUNCE_TRACKING_PROTECTION_STATE
+       Changes for agent method
+       Documentation and test suite fixes
+
 1.52  Mon Feb 03 21:30 2024
        Adding stealth attribute
        Adding CLEAR_FINGERPRINTING_PROTECTION_STATE
