Adding documentation and tests for arch parameter for agent method

--- a/README
+++ b/README
@@ -423,6 +423,9 @@ SUBROUTINES/METHODS
 
       * version - A specific version of firefox, such as 120.
 
+      * arch - A specific version of the architecture, such as "x86_64" or
+      "aarch64" or "s390x".
+
       * increment - A specific offset from the actual version of firefox,
       such as -5
 
@@ -436,6 +439,10 @@ SUBROUTINES/METHODS
     
         # user agent is now equal to
         # Mozilla/5.0 (X11; FreeBSD amd64; rv:109.0) Gecko/20100101 Firefox/118.0
+    
+        $firefox->agent(os => 'linux', arch => 's390x', version => 115);
+        # user agent is now equal to
+        # Mozilla/5.0 (X11; Linux s390x; rv:109.0) Gecko/20100101 Firefox/115.0
 
     If the stealth parameter has supplied to the new method, it will also
     attempt to change a number of javascript attributes to match the
