--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Firefox-Marionette
 
+1.59  Sun Jun 30 20:10 2024
+       Adding SSH_CONNECTION and EUID into syslog for ssh-auth-cmd-marionette
+       Changed CLEAR_PERMISSIONS, added CLEAR_SHUTDOWN_EXCEPTIONS and CLEAR_SITE_PERMISSIONS methods
+       Allow addons with profile names.  Thanks to prozorecJP for the bug report in GH#48
+       cygwin/darwin fixes for ssh-auth-cmd-marionette
+       Various test suite/coverage fixes
+
 1.58  Sat Jun 15 21:01 2024
        Fixes to sftp regexs in ssh-auth-cmd-marionette
        Adding initial timezone work
