Fixing documentation for geo method

--- a/README
+++ b/README
@@ -1430,6 +1430,8 @@ SUBROUTINES/METHODS
     getCurrentPosition
     <https://developer.mozilla.org/en-US/docs/Web/API/Geolocation/getCurrentPosition>
     method. This method is further discussed in the GEO LOCATION section.
+    If the current location cannot be determined, this method will return
+    undef.
 
     NOTE: firefox will only allow Geolocation
     <https://developer.mozilla.org/en-US/docs/Web/API/Geolocation> calls to
@@ -1450,9 +1452,11 @@ SUBROUTINES/METHODS
     
         $firefox->go('https://maps.google.com/');
     
-        my $geo = $firefox->geo();
-    
-        warn "Apparently, we're now at " . join q[, ], $geo->latitude(), $geo->longitude();
+        if (my $geo = $firefox->geo()) {
+            warn "Apparently, we're now at " . join q[, ], $geo->latitude(), $geo->longitude();
+        } else {
+            warn "This computer is not allowing geolocation";
+        }
     
         # OR the quicker setup (run this with perl -C)
     
