--- a/README
+++ b/README
@@ -3517,6 +3517,24 @@ WEBGL
             die "WebGL is not supported";
         }
 
+FILE UPLOADS
+
+    Uploading files in forms is accomplished by using the type command. An
+    example is shown below;
+
+        use Firefox::Marionette();
+        use File::Spec();
+        use Cwd();
+    
+        my $firefox = Firefox::Marionette->new();
+        my $firefox_marionette_directory = Cwd::cwd();
+        $firefox->go("https://practice.expandtesting.com/upload");
+        while($firefox->percentage_visible($firefox->find_id("fileSubmit")) < 90) {
+            sleep 1;
+        }
+        $firefox->find_id("fileInput")->type(File::Spec->catfile($firefox_marionette_directory, qw(t 04-uploads.t)));
+        $firefox->find_id("fileSubmit")->click();
+
 FINDING ELEMENTS IN A SHADOW DOM
 
     One aspect of Web Components
