--- a/README
+++ b/README
@@ -2280,6 +2280,11 @@ SUBROUTINES/METHODS
       automatically exit when the object goes out of scope. See the
       reconnect parameter for an experimental technique for reconnecting.
 
+      * system_access - firefox after version 138
+      <https://bugzilla.mozilla.org/show_bug.cgi?id=1944565> allows
+      disabling system access for javascript. By default, this module will
+      turn on system access.
+
       * trust - give a path to a root certificate
       <https://en.wikipedia.org/wiki/Root_certificate> encoded as a PEM
       encoded X.509 certificate
